[gd_scene load_steps=4 format=3 uid="uid://bb5onqsighxn5"]

[ext_resource type="Script" uid="uid://cn2nigooyb4l8" path="res://globals/music_manager.gd" id="1_tn5dr"]
[ext_resource type="AudioStream" uid="uid://d6ggf3w2m66k" path="res://assets/sounds/menu.wav" id="2_hetdf"]
[ext_resource type="AudioStream" uid="uid://cbqyi7r4e8dig" path="res://assets/sounds/rune.wav" id="3_gq8vl"]

[node name="MusicManager" type="Node"]
script = ExtResource("1_tn5dr")

[node name="LocationAudio1" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_hetdf")
autoplay = true

[node name="LocationAudio2" type="AudioStreamPlayer" parent="."]
process_mode = 3

[node name="RuneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gq8vl")
